# Mailing_list_management

./: README.md  env.sample  pyproject.toml
config/: settings.py  urls.py
management_email/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
management_email/management/commands/: send_mailing.py
management_email/migrations/: 0001_initial.py  0002_customers_owner_mailing_owner.py  0003_alter_mailing_options.py  0004_message_owner.py  0005_alter_mailing_options.py
management_email/templates/: customers_cofirm_delete.html  customers_detail.html  customers_form.html  home.html
management_email/templates/includes/: inc_menu.html
management_email/templates/management_email/: base.html  customers_cofirm_delete.html  customers_detail.html  customers_form.html  customers_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailingattempt_list.html  message_cofirm_delete.html  message_detail.html  message_form.html  message_list.html
management_email/templates/management_email/includes/: inc_menu.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html
users/templates/registration/: login.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  user_form.html
